<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                card_view:cardCornerRadius="7dp"
                card_view:cardUseCompatPadding="true"
                android:layout_margin="10dp"
                card_view:cardElevation="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="Identificação"
                        android:background="@color/primary"
                        android:textColor="@color/white"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/Base.DialogWindowTitle.AppCompat"/>

                    <TableLayout
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="5dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TableRow>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="5dp"
                                android:paddingTop="15dp"
                                android:paddingEnd="5dp"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:text="Id.:"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="5dp"
                                android:paddingTop="15dp"
                                android:paddingStart="15dp"
                                android:text="@{cow.id}"
                                android:id="@+id/cow_desc_id"/>
                        </TableRow>
                        <TableRow>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="5dp"
                                android:paddingBottom="15dp"
                                android:paddingEnd="5dp"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:text="Nasc.:"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="5dp"
                                android:paddingBottom="15dp"
                                android:paddingStart="15dp"
                                android:text="@{cow.birthdate}"
                                android:id="@+id/cow_desc_birthdate"/>
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                card_view:cardCornerRadius="7dp"
                card_view:cardUseCompatPadding="true"
                android:layout_margin="10dp"
                card_view:cardElevation="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="Vacinações"
                        android:background="@color/primary"
                        android:textColor="@color/white"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/Base.DialogWindowTitle.AppCompat"/>

                    <TextView
                        android:text="@{cow.vaccs}"
                        android:id="@+id/cow_desc_vaccs"
                        android:padding="15dp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                card_view:cardCornerRadius="7dp"
                card_view:cardUseCompatPadding="true"
                android:layout_margin="10dp"
                card_view:cardElevation="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="Pesagens"
                        android:background="@color/primary"
                        android:textColor="@color/white"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/Base.DialogWindowTitle.AppCompat"/>

                    <TextView
                        android:text="@{cow.weightings}"
                        android:id="@+id/cow_desc_weightings"
                        android:padding="15dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert_vaccine"
                android:layout_margin="10dp"
                android:background="@color/secondary"
                android:onClick="requestAddVaccine"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/secondary"
                android:text="@string/insert_weighting"
                android:onClick="requestAddWeighting"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/secondary"
                android:text="@string/remove"
                android:onClick="requestRemove"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>